--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div class="hero-transparent">
           <div class="container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="main-button" data-modal-open>Замовити послугу</button>
+            <button type="button" class="main-button" data-modal-open>
+              Замовити послугу
+            </button>
           </div>
         </div>
       </section>
@@ -121,7 +123,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h class="subtitle">Сучасні технології</h>
+              <h3 class="subtitle">Сучасні технології</h3>
               <p class="desc">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -387,29 +389,29 @@
       <div class="container">
         <div class="footer-container">
           <div>
-          <a href="./index.html" class="link footer-logo"
-          >Web<span>Studio</span></a
-          >
-          <address>
-          <ul class="list footer-list-address">
-            <li class="footer-link-address">
-              <a
-                href="https://goo.gl/maps/hhmb5HZiCFxnfWHcA"
-                class="link footer-link"
-                target="_blank"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-link-address">
-              <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-link-address">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-         </address>
+            <a href="./index.html" class="link footer-logo"
+              >Web<span>Studio</span></a
+            >
+            <address>
+              <ul class="list footer-list-address">
+                <li class="footer-link-address">
+                  <a
+                    href="https://goo.gl/maps/hhmb5HZiCFxnfWHcA"
+                    class="link footer-link"
+                    target="_blank"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="footer-link-address">
+                  <a href="mailto:info@devstudio.com" class="link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-link-address">
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
           </div>
           <div class="footer-social">
             <p class="footer-social-title">Приєднуйтесь</p>
@@ -418,40 +420,40 @@
                 <a class="footer-social-link" href="">
                   <svg width="20" height="20" class="team-social-svg">
                     <use href="./images/icons.svg#icon-instagram"></use>
-                 </svg>
+                  </svg>
                 </a>
-             </li>
+              </li>
               <li class="footer-social-item">
-               <a class="footer-social-link" href="">
-                 <svg width="20" height="20" class="footer-social-svg">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="footer-social-svg">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
-               </a>
+                </a>
               </li>
               <li class="footer-social-item">
-               <a class="footer-social-link" href="">
+                <a class="footer-social-link" href="">
                   <svg width="20" height="20" class="footer-social-svg">
-                   <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
-               </a>
-             </li>
-             <li class="footer-social-item">
-               <a class="footer-social-link" href="">
-                 <svg width="20" height="20" class="footer-social-svg">
-                   <use href="./images/icons.svg#icon-linkedin"></use>
-                 </svg>
-               </a>
+                </a>
               </li>
-             </ul>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="footer-social-svg">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
-
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-button" data-modal-close>
-          <svg width='11' height='11' class=''>
-            <use href='./images/icons.svg#icon-close-button'></use>
+          <svg width="11" height="11" class="">
+            <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
         </button>
       </div>
