--- a/portfolio.html
+++ b/portfolio.html
@@ -26,20 +26,24 @@
     <header class="header">
       <div class="container">
         <div class="header-container">
-          <nav class="navigation">
+          <nav class="header-navigation">
             <a href="./index.html" class="link logo">Web<span>Studio</span></a>
-            <ul class="list header-navigation-list">
+            <ul class="list header-navigation__list">
               <li>
-                <a class="link navigation-link" href="./index.html">Студія</a>
+                <a class="link header-navigation__link" href="./index.html"
+                  >Студія</a
+                >
               </li>
               <li>
                 <a
-                  class="link navigation-link current-page"
+                  class="link header-navigation__link header-navigation__link--current-page"
                   href="./portfolio.html"
                   >Портфоліо</a
                 >
               </li>
-              <li><a class="link navigation-link" href="">Контакти</a></li>
+              <li>
+                <a class="link header-navigation__link" href="">Контакти</a>
+              </li>
             </ul>
           </nav>
           <ul class="header-address list">
@@ -91,10 +95,14 @@
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-example">
                   <img
-                  src="./images/tehnokryak.jpg"
-                  alt="Приклад проекту технокряк"
+                    src="./images/tehnokryak.jpg"
+                    alt="Приклад проекту технокряк"
                   />
-                  <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Технокряк</h2>
@@ -104,12 +112,16 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
+                <div class="portfolio-list-example">
                   <img
-                  src="./images/poster-basket-team.jpg"
-                  alt="Приклад проекту постер New Orlean vs Golden Star"
+                    src="./images/poster-basket-team.jpg"
+                    alt="Приклад проекту постер New Orlean vs Golden Star"
                   />
-                  <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
@@ -119,12 +131,16 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
+                <div class="portfolio-list-example">
                   <img
-                  src="./images/seafood-restauran.jpg"
-                  alt="Приклад проекту Ресторан Seafood"
+                    src="./images/seafood-restauran.jpg"
+                    alt="Приклад проекту Ресторан Seafood"
                   />
-                  <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Ресторан Seafood</h2>
@@ -134,9 +150,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
+                <div class="portfolio-list-example">
                   <img src="./images/prime.jpg" alt="Приклад проекту Prime" />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Проєкт Prime</h2>
@@ -146,9 +166,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
-                 <img src="./images/boxes.jpg" alt="Приклад проекту Boxes" />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="portfolio-list-example">
+                  <img src="./images/boxes.jpg" alt="Приклад проекту Boxes" />
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Проєкт Boxes</h2>
@@ -158,12 +182,16 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
-                 <img
-                  src="./images/inspiration-has-no-borders.jpg"
-                  alt="Приклад проекту Inspiration has no Borders"
-                 />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="portfolio-list-example">
+                  <img
+                    src="./images/inspiration-has-no-borders.jpg"
+                    alt="Приклад проекту Inspiration has no Borders"
+                  />
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Inspiration has no Borders</h2>
@@ -173,12 +201,16 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
-                 <img
-                  src="./images/limited-edition.jpg"
-                  alt="Приклад проекту Видання Limited Edition"
+                <div class="portfolio-list-example">
+                  <img
+                    src="./images/limited-edition.jpg"
+                    alt="Приклад проекту Видання Limited Edition"
                   />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Видання Limited Edition</h2>
@@ -188,9 +220,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
-                 <img src="./images/lab.jpg" alt="Приклад проекту LAB" />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="portfolio-list-example">
+                  <img src="./images/lab.jpg" alt="Приклад проекту LAB" />
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Проєкт LAB</h2>
@@ -200,12 +236,16 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <div class="portfolio-list-example"> 
-                 <img
-                  src="./images/growing-business.jpg"
-                  alt="Приклад проекту Growing Business"
-                />
-                 <p class="portfolio-list-hidden">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="portfolio-list-example">
+                  <img
+                    src="./images/growing-business.jpg"
+                    alt="Приклад проекту Growing Business"
+                  />
+                  <p class="portfolio-list-hidden">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
                 </div>
                 <div class="portfolio-list-desc">
                   <h2 class="subtitle">Growing Business</h2>
@@ -222,62 +262,80 @@
       <div class="container">
         <div class="footer-container">
           <div>
-          <a href="./index.html" class="link footer-logo"
-          >Web<span>Studio</span></a
-          >
-          <address>
-          <ul class="list footer-list-address">
-            <li class="footer-link-address">
-              <a
-                href="https://goo.gl/maps/hhmb5HZiCFxnfWHcA"
-                class="link footer-link"
-                target="_blank"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-link-address">
-              <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-link-address">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-         </address>
+            <a href="./index.html" class="link footer-logo"
+              >Web<span>Studio</span></a
+            >
+            <address>
+              <ul class="list footer-list-address">
+                <li class="footer-link-address">
+                  <a
+                    href="https://goo.gl/maps/hhmb5HZiCFxnfWHcA"
+                    class="link footer-link"
+                    target="_blank"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="footer-link-address">
+                  <a href="mailto:info@devstudio.com" class="link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-link-address">
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
           </div>
-         <div class="footer-social">
-          <p>Приєднуйтесь</h2>
-        <ul class="footer-social-list list">
-          <li class="footer-social-item">
-            <a class="footer-social-link" href=""
-              ><svg width="20" height="20" class="team-social-svg">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="">
-              <svg width="20" height="20" class="footer-social-svg">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="">
-              <svg width="20" height="20" class="footer-social-svg">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="">
-              <svg width="20" height="20" class="footer-social-svg">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-          </ul>
+          <div class="footer-social">
+            <p class="footer-social-title">Приєднуйтесь</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="team-social-svg">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="footer-social-svg">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="footer-social-svg">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg width="20" height="20" class="footer-social-svg">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-subscribe">
+            <p class="footer-subscribe-title">Підпишіться на розсилку</p>
+            <form name="footer-subscribe" class="footer-subscribe-form">
+              <input
+                name="subscribe-email"
+                type="email"
+                class="footer-subscribe-input"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="subscribe-button">
+                Підписатися
+                <svg width="24" height="24" class="footer-subscribe-svg">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
